<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vacio"
    tools:context=".fragment2">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/vacio"
        android:orientation="vertical">

        <EditText
            android:id="@+id/correo"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@color/form"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorLetra"
            android:textColorHint="@color/colorLetra" />

        <EditText
            android:id="@+id/contra"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/form"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/cont"
            android:inputType="textPassword"
            android:textColor="@color/colorLetra"
            android:textColorHint="@color/colorLetra" />

        <Button
            android:id="@+id/acceso"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/boton"
            android:text="@string/acc"
            app:cornerRadius="58dp" />
    </LinearLayout>

</FrameLayout>